[tool.poetry]
name = "ml_query_estimation"
version = "0.1.0"
description = ""
authors = ["Brandon Lockhart <brandon_lockhart@sfu.ca>"]


[tool.poetry.dependencies]
python = "^3.7"

# Dependencies
pandas = "~0.25"
numpy = "~1.17"
scipy = "~1.3"
scikit-learn = "~0.22"
matplotlib = "~3.1.2"
hyperopt = "~0.2.2"


[tool.poetry.dev-dependencies]
pylint = "~2.4"
pytype = "~2019.8"
pytest = "~5.1"
mypy = "~0.740"
black = "19.10b0"
sphinx = "~2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37']
exclude = '''
(
    /(
        \.eggs
    | \.git
    | \.pytype
    | \.pytest_cache
    | build
    | dist
    )/
)
'''